Adjust margin so em wraps correctly

--- a/templates/modern/css/screen.css
+++ b/templates/modern/css/screen.css
@@ -139,6 +139,7 @@
         em {
             font-size: 130%;
             font-style: normal;
+            margin-right: 2em;
         }
         
     }
